--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ JB :
   #   - Only the following values are falsy: ["", null, false]
   #   - When setting BASE_PATH it must be a valid url.
   #     This means always setting the protocol (http|https) or prefixing with "/"
-  BASE_PATH : http://adamvi.github.io/Washington
+  BASE_PATH : http://centerforassessment.github.io/Washington
 
   # By default, the asset_path is automatically defined relative to BASE_PATH plus the enabled theme.
   # ex: [BASE_PATH]/assets/themes/[THEME-NAME]
@@ -68,29 +68,29 @@ JB :
   # These paths are to the main pages Jekyll-Bootstrap ships with.
   # Some JB helpers refer to these paths; change theme here if needed.
   #
-  archive_path: /archive.html
-  categories_path : /categories.html
-  tags_path : /tags.html
-  atom_path : /atom.xml
-  rss_path : /rss.xml
+  #archive_path: /archive.html
+  #categories_path : /categories.html
+  #tags_path : /tags.html
+  #atom_path : /atom.xml
+  #rss_path : /rss.xml
 
   # Settings for comments helper
   # Set 'provider' to the comment provider you want to use.
   # Set 'provider' to false to turn commenting off globally.
   #
-  comments :
-    provider : disqus
-    disqus :
-      short_name : washington_sgp
+  #  comments :
+  #    provider : disqus
+  #    disqus :
+  #      short_name : washington_sgp
    
   # Settings for analytics helper
   # Set 'provider' to the analytics provider you want to use.
   # Set 'provider' to false to turn analytics off globally.
   #        
-  analytics :
-    provider : google 
-    google : 
-      tracking_id : 'UA-XXXXXXXX-Y'
+  # analytics :
+  #   provider : google 
+  #   google : 
+  #     tracking_id : 'UA-XXXXXXXX-Y'
 
   # Settings for sharing helper. 
   # Sharing is for things like tweet, plusone, like, reddit buttons etc.
@@ -133,14 +133,20 @@ navbar:
         label: Published Articles <b class='caret'></b>
         submenu: 
           - 
-            label: EMIP 2009
-            link:  404.html
+            label:  Norm- and criterion-referenced student growth.<br> Betebenner, EMIP 2009
+            link:  resources/Betebenner_EMIP_2009.pdf
       - 
         label: White Papers
         submenu: 
           - 
-            label: The SGP Method
-            link: 404.html
+            label: Norm- and Criterion-Referenced Student Growth <br> Betebenner 2008
+            link: http://www.nciea.org/publication_PDFs/normative_criterion_growth_DB08.pdf
+          - 
+            label: Growth Standards & Accountability <br> Betebenner 2009
+            link: http://www.nciea.org/publication_PDFs/growthandStandard_DB09.pdf
+          - 
+            label: Student Growth Percentiles and Shoe Leather <br> Betebenner, Wenning & Briggs 2011
+            link: http://www.nciea.org/publication_PDFs/growthandStandard_DB09.pdf
 
   -
     name: How it Works 
@@ -149,27 +155,33 @@ navbar:
         label: Analytic Software <b class='caret'></b>
         submenu:
           - 
-            label: R and the SGP Package
-            link: 404.html
+            label: SGP Package Primer
+            link: resources/sgpPrimer.pdf
           - 
             label: SGP Demonstrations
             link: 404.html
       - 
         label: Data Prep and Structure
-        link: X.pdf
+        link: https://github.com/CenterForAssessment/SGP#data-preparation
       - 
         label: Presentations & Trainings <b class='caret'></b>
         submenu: 
           - 
-            label: SGP Primer
-            link: 404.html
+            label: R and the SGP Package
+            link: resources/R+SGP_Package.pdf
           - 
             label: NCME Presentation
             link: 404.html
 
   -
     name: About Us 
-    link: 404.html
+    menu: 
+      - 
+        label: Center for Assessment (NCIEA)
+        link: http://www.nciea.org/
+      - 
+        label: Washington Office of Superintendent of Public Instruction (OSPI)
+        link: http://www.k12.wa.us/Assessment/StudentGrowth.aspx
 
   -
     name: Contact Us 
