Correct the BASE_PATH and clean up

--- a/_config.yml
+++ b/_config.yml
@@ -23,17 +23,12 @@ CFA:
   email: dbetebenner@nciea.org
   mapsite: 'http://a.tiles.mapbox.com/v3/adamvi.map-skzt93ls.html#14/43.19873153204993/-70.878'
 
-#'http://a.tiles.mapbox.com/v3/adamvi.map-skzt93ls.html#14/43.200358309041576/-70.86825370788574'
-# "http://a.tiles.mapbox.com/v3/adamvi.map-skzt93ls.html#14/43.20142194746969/-70.85769653320312"
-
 client:
   name: Washington OSPI
   address: Old Capitol Building <br> P.O. Box 47200 <br> Olympia, WA 98504
   phone: (360) 725-6000
   email: studentgrowth@k12.wa.us
   mapsite: 'http://a.tiles.mapbox.com/v3/adamvi.map-08ie93kt.html#14/47.041/-122.9'
- # 'http://a.tiles.mapbox.com/v3/adamvi.map-08ie93kt.html#14/47.039304752323034/-122.89589881896973'
- #"http://a.tiles.mapbox.com/v3/adamvi.map-08ie93kt.html#14/47.04012365242329/-122.88079261779785"
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
@@ -72,8 +67,7 @@ JB :
   #   - Only the following values are falsy: ["", null, false]
   #   - When setting BASE_PATH it must be a valid url.
   #     This means always setting the protocol (http|https) or prefixing with "/"
-#  BASE_PATH : http://centerforassessment.github.io/Washington
-  BASE_PATH : http://adamvi.github.io/Test_State
+  BASE_PATH : http://centerforassessment.github.io/Washington
 
   # By default, the asset_path is automatically defined relative to BASE_PATH plus the enabled theme.
   # ex: [BASE_PATH]/assets/themes/[THEME-NAME]
