--- a/_config.yml
+++ b/_config.yml
@@ -145,7 +145,7 @@ navbar:
         submenu: 
           - 
             label: School Year 2011-12
-            link: 404.html
+            link: An_Example_Github_Pages_Document.html
           - 
             label: School Year 2012-13
             link: Washington_SGP_Report_2013.html
